@@ -1,17 +1,8 @@
 /*
- * Copyright (c) 2010-2013 Evolveum
+ * Copyright (c) 2010-2013 Evolveum and contributors
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * This work is dual-licensed under the Apache License 2.0
+ * and European Union Public License. See LICENSE file for details.
  */
 
 package com.evolveum.midpoint.repo.sql.testing;
@@ -58,10 +49,10 @@ public class TestSqlRepositoryFactory extends SqlRepositoryFactory {
         super.init(configuration);
     }
 
-    @Override
-    public RepositoryService getRepositoryService() throws RepositoryServiceFactoryException {
-        return new TestSqlRepositoryServiceImpl(this);
-    }
+//    @Override
+//    public RepositoryService getRepositoryService() throws RepositoryServiceFactoryException {
+//        return new TestSqlRepositoryServiceImpl(this);
+//    }
 
     private void updateConfigurationFromFile(Configuration configuration, String filePath) throws RepositoryServiceFactoryException {
         Properties properties = new Properties();
@@ -85,6 +76,8 @@ public class TestSqlRepositoryFactory extends SqlRepositoryFactory {
     }
 
     private void updateConfigurationFromProperties(Configuration configuration, Properties properties) {
+        updateConfigurationStringProperty(configuration, properties, PROPERTY_DATABASE);
+
         updateConfigurationBooleanProperty(configuration, properties, PROPERTY_EMBEDDED);
         updateConfigurationBooleanProperty(configuration, properties, PROPERTY_DROP_IF_EXISTS);
         updateConfigurationBooleanProperty(configuration, properties, PROPERTY_AS_SERVER);
@@ -101,6 +94,14 @@ public class TestSqlRepositoryFactory extends SqlRepositoryFactory {
         updateConfigurationStringProperty(configuration, properties, PROPERTY_JDBC_URL);
         updateConfigurationStringProperty(configuration, properties, PROPERTY_JDBC_USERNAME);
 
+        updateConfigurationBooleanProperty(configuration, properties, PROPERTY_SKIP_EXPLICIT_SCHEMA_VALIDATION);
+        updateConfigurationStringProperty(configuration, properties, PROPERTY_MISSING_SCHEMA_ACTION);
+        updateConfigurationStringProperty(configuration, properties, PROPERTY_UPGRADEABLE_SCHEMA_ACTION);
+        updateConfigurationStringProperty(configuration, properties, PROPERTY_INCOMPATIBLE_SCHEMA_ACTION);
+        updateConfigurationStringProperty(configuration, properties, PROPERTY_SCHEMA_VERSION_IF_MISSING);
+        updateConfigurationStringProperty(configuration, properties, PROPERTY_SCHEMA_VERSION_OVERRIDE);
+        updateConfigurationStringProperty(configuration, properties, PROPERTY_SCHEMA_VARIANT);
+
         updateConfigurationStringProperty(configuration, properties, PROPERTY_TRANSACTION_ISOLATION);
         updateConfigurationBooleanProperty(configuration, properties, PROPERTY_LOCK_FOR_UPDATE_VIA_HIBERNATE);
         updateConfigurationBooleanProperty(configuration, properties, PROPERTY_LOCK_FOR_UPDATE_VIA_SQL);
@@ -110,10 +111,28 @@ public class TestSqlRepositoryFactory extends SqlRepositoryFactory {
 
         updateConfigurationBooleanProperty(configuration, properties, PROPERTY_ITERATIVE_SEARCH_BY_PAGING);
         updateConfigurationStringProperty(configuration, properties, PROPERTY_ITERATIVE_SEARCH_BY_PAGING_BATCH_SIZE);
+        updateConfigurationStringProperty(configuration, properties, PROPERTY_MAX_OBJECTS_FOR_IMPLICIT_FETCH_ALL_ITERATION_METHOD);
 
         updateConfigurationBooleanProperty(configuration, properties, PROPERTY_USE_ZIP);
         updateConfigurationIntegerProperty(configuration, properties, PROPERTY_MIN_POOL_SIZE);
         updateConfigurationIntegerProperty(configuration, properties, PROPERTY_MAX_POOL_SIZE);
+
+        updateConfigurationIntegerProperty(configuration, properties, PROPERTY_TEXT_INFO_COLUMN_SIZE);
+
+        // Dirty hack, in order to make DataSourceTest happy: if none of database, driver, dialect, embedded is
+        // present but data source is, let us assume we use H2.
+        //
+        // The reason is that when using datasource (and without the dialect set) we do not have the usual information
+        // we could use to derive the database. We do not want to default to H2, as it could cause problems in
+        // production. So we switch to H2 in such cases only in the test mode - i.e. here.
+
+        if (!configuration.containsKey(PROPERTY_DATABASE)
+                && !configuration.containsKey(PROPERTY_DRIVER_CLASS_NAME)
+                && !configuration.containsKey(PROPERTY_HIBERNATE_DIALECT)
+                && !configuration.containsKey(PROPERTY_EMBEDDED)
+                && configuration.containsKey(PROPERTY_DATASOURCE)) {
+            configuration.setProperty(PROPERTY_DATABASE, Database.H2.name());
+        }
     }
 
     private void updateConfigurationIntegerProperty(Configuration configuration, Properties properties, String propertyName) {
@@ -131,13 +150,21 @@ public class TestSqlRepositoryFactory extends SqlRepositoryFactory {
         if (value == null) {
             return;
         }
-        boolean val = new Boolean(value).booleanValue();
+        boolean val = Boolean.valueOf(value);
         LOGGER.info("Overriding loaded configuration with value read from system properties: {}={}", propertyName, val);
         configuration.setProperty(propertyName, val);
     }
 
     private void updateConfigurationStringProperty(Configuration configuration, Properties properties, String propertyName) {
+        updateConfigurationStringProperty(configuration, properties, propertyName, null);
+    }
+
+    private void updateConfigurationStringProperty(Configuration configuration, Properties properties, String propertyName, String defaultValue) {
         String value = properties != null ? properties.getProperty(propertyName) : System.getProperty(propertyName);
+        if (value == null) {
+            value = defaultValue;
+        }
+
         if (value == null) {
             return;
         }
